# jeu_du_singe

./: CMakeLists.txt  main.cpp
src/: Player.cpp  Player.h  file.cpp  file.h  game.cpp  game.h  hstring.cpp  hstring.h  node.cpp  node.h  pNode.cpp  pNode.h  pile.cpp  pile.h  player.cpp  player.h  range.cpp  range.h  text_file.cpp  text_file.h  tree.cpp  tree.h  types_const.h
tests/: test_file.cpp  test_hstring.cpp  test_pile.cpp  test_tree.cpp  tests.h
